--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".ui.SettingFragment">
 
     <TextView
@@ -12,56 +11,127 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_medium"
+        android:layout_marginTop="@dimen/margin_medium"
         android:text="User Info"
-
         android:textAppearance="?textAppearanceHeadline6"
+        android:textColor="@color/reply_blue_700"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
+
+    <ImageButton
         android:id="@+id/edit_info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/user_info"
-        app:layout_constraintBottom_toBottomOf="@id/user_info"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginEnd="@dimen/margin_medium"
+        android:background="@null"
+        android:src="@drawable/ic_baseline_edit_24"
+        app:layout_constraintBottom_toBottomOf="@+id/user_info"
         app:layout_constraintEnd_toEndOf="parent"
-        android:text="Edit Info"
-        android:textStyle="italic"
-        android:layout_marginEnd="@dimen/margin_medium"/>
+        app:layout_constraintTop_toTopOf="@id/user_info" />
 
 
     <TextView
         android:id="@+id/student_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Someone's name"
+        android:layout_marginTop="@dimen/margin_small"
+        android:textAppearance="?textAppearanceSubtitle1"
+        android:textColor="@color/reply_blue_700"
         app:layout_constraintStart_toStartOf="@id/user_info"
-        app:layout_constraintTop_toBottomOf="@+id/user_info" />
+        app:layout_constraintTop_toBottomOf="@+id/user_info"
+        tools:text="Someone's name" />
 
     <TextView
         android:id="@+id/student_usn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="4MH18XXXXX"
+        android:textAppearance="?textAppearanceSubtitle1"
+        android:textColor="@color/reply_blue_700"
         app:layout_constraintStart_toStartOf="@id/student_name"
-        app:layout_constraintTop_toBottomOf="@+id/student_name" />
+        app:layout_constraintTop_toBottomOf="@+id/student_name"
+        tools:text="4MH18XXXXX" />
 
     <TextView
-        android:id="@+id/student_baranch"
+        android:id="@+id/student_branch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Branch Name"
+        android:textAppearance="?textAppearanceSubtitle1"
+        android:textColor="@color/reply_blue_700"
         app:layout_constraintStart_toStartOf="@id/student_usn"
-        app:layout_constraintTop_toBottomOf="@+id/student_usn" />
+        app:layout_constraintTop_toBottomOf="@+id/student_usn"
+        tools:text="Branch Name" />
+
 
     <TextView
         android:id="@+id/about_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="About"
+        android:layout_marginStart="@dimen/margin_medium"
+        android:layout_marginTop="@dimen/margin_medium"
+        android:text="About CGPA Calculator"
         android:textAppearance="?textAppearanceHeadline6"
-        app:layout_constraintStart_toStartOf="@id/student_baranch"
-        app:layout_constraintTop_toBottomOf="@id/student_baranch"/>
+        android:textColor="@color/reply_blue_700"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/student_branch" />
+
+    <TextView
+        android:id="@+id/about"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_medium"
+        android:layout_marginTop="@dimen/margin_small"
+        android:layout_marginEnd="@dimen/margin_medium"
+        android:justificationMode="inter_word"
+        android:lineSpacingExtra="2dp"
+        android:text="@string/about_cgpa_calc"
+        android:textAppearance="?textAppearanceBody2"
+        android:textColor="@color/reply_blue_700"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/about_tv" />
+
+
+    <TextView
+        android:id="@+id/link_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_medium"
+        android:layout_marginTop="16dp"
+        android:text="Link to Repository :"
+        android:textAppearance="?textAppearanceBody2"
+        android:textColor="@color/reply_blue_700"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/about" />
+
+    <TextView
+        android:id="@+id/github_link"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_small"
+        android:layout_marginTop="@dimen/margin_small"
+        android:text="@string/click_here"
+        android:textAppearance="?textAppearanceBody2"
+        android:textColor="#0F72D5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/link_label" />
+
+    <Button
+        android:id="@+id/reset_button"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_medium"
+        android:layout_marginBottom="@dimen/margin_medium"
+        android:text="Reset All Data"
+        android:textColor="@color/reply_red_400"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
