--- a/app/src/main/res/layout/recycler_view_marks_list.xml
+++ b/app/src/main/res/layout/recycler_view_marks_list.xml
@@ -2,25 +2,30 @@
 <com.google.android.material.textfield.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/subject_code"
-    android:padding="8dp"
     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
-    android:layout_marginBottom="16dp"
+    android:layout_marginStart="@dimen/margin_medium"
+    android:layout_marginEnd="@dimen/margin_medium"
+    android:layout_marginBottom="@dimen/margin_medium"
+    android:padding="8dp"
+    app:boxStrokeColor="@color/reply_blue_700"
+    app:hintTextAppearance="?textAppearanceSubtitle1"
+    app:hintTextColor="@color/reply_blue_700"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent">
+    app:layout_constraintTop_toTopOf="parent"
+    app:placeholderTextAppearance="?textAppearanceSubtitle1">
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/subject_marks"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="number"
         android:enabled="true"
+        android:inputType="number"
+        android:maxLength="3"
         android:textAppearance="?textAppearanceHeadline5"
-        android:maxLength="3" />
+        android:textColor="@color/reply_blue_700" />
 
 </com.google.android.material.textfield.TextInputLayout>
 
