--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -3,20 +3,20 @@
 
     <item
         android:id="@+id/calculatorFragment"
-        android:title="Calculator"
         android:enabled="true"
-        android:icon="@drawable/ic_calculator"/>
+        android:icon="@drawable/ic_calculator"
+        android:title="Calculator" />
 
     <item
         android:id="@+id/reportFragment"
-        android:title="Report"
         android:enabled="true"
-        android:icon="@drawable/ic_report"/>
+        android:icon="@drawable/ic_report"
+        android:title="Report" />
 
     <item
         android:id="@+id/settingFragment"
-        android:title="Settings"
         android:enabled="true"
-        android:icon="@drawable/ic_settings"/>
+        android:icon="@drawable/ic_settings"
+        android:title="Settings" />
 
 </menu>
