--- a/app/src/main/res/layout/fragment_edit_info.xml
+++ b/app/src/main/res/layout/fragment_edit_info.xml
@@ -20,6 +20,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edit_student_name"
+            android:inputType="textPersonName"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -41,6 +42,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edit_student_usn"
             android:layout_width="match_parent"
+            android:maxLength="10"
             android:layout_height="match_parent"
             android:text="4MH18">
 
