--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -1,137 +1,161 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.SettingFragment">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/user_info"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_medium"
-        android:layout_marginTop="@dimen/margin_medium"
-        android:text="User Info"
-        android:textAppearance="?textAppearanceHeadline6"
-        android:textColor="@color/reply_blue_700"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:context=".ui.SettingFragment">
+
+        <TextView
+            android:id="@+id/user_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_medium"
+            android:layout_marginTop="@dimen/margin_medium"
+            android:text="User Info"
+            android:textAppearance="?textAppearanceHeadline6"
+            android:textColor="@color/reply_blue_700"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
-    <ImageButton
-        android:id="@+id/edit_info"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginEnd="@dimen/margin_medium"
-        android:background="@null"
-        android:src="@drawable/ic_baseline_edit_24"
-        app:layout_constraintBottom_toBottomOf="@+id/user_info"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/user_info" />
+        <ImageButton
+            android:id="@+id/edit_info"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginEnd="@dimen/margin_medium"
+            android:background="@null"
+            android:src="@drawable/ic_baseline_edit_24"
+            app:layout_constraintBottom_toBottomOf="@+id/user_info"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/user_info" />
 
 
-    <TextView
-        android:id="@+id/student_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_small"
-        android:textAppearance="?textAppearanceSubtitle1"
-        android:textColor="@color/reply_blue_700"
-        app:layout_constraintStart_toStartOf="@id/user_info"
-        app:layout_constraintTop_toBottomOf="@+id/user_info"
-        tools:text="Someone's name" />
+        <TextView
+            android:id="@+id/student_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_small"
+            android:textAppearance="?textAppearanceSubtitle1"
+            android:textColor="@color/reply_blue_700"
+            app:layout_constraintStart_toStartOf="@id/user_info"
+            app:layout_constraintTop_toBottomOf="@+id/user_info"
+            tools:text="Someone's name" />
 
-    <TextView
-        android:id="@+id/student_usn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?textAppearanceSubtitle1"
-        android:textColor="@color/reply_blue_700"
-        app:layout_constraintStart_toStartOf="@id/student_name"
-        app:layout_constraintTop_toBottomOf="@+id/student_name"
-        tools:text="4MH18XXXXX" />
+        <TextView
+            android:id="@+id/student_usn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?textAppearanceSubtitle1"
+            android:textColor="@color/reply_blue_700"
+            app:layout_constraintStart_toStartOf="@id/student_name"
+            app:layout_constraintTop_toBottomOf="@+id/student_name"
+            tools:text="4MH18XXXXX" />
 
-    <TextView
-        android:id="@+id/student_branch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?textAppearanceSubtitle1"
-        android:textColor="@color/reply_blue_700"
-        app:layout_constraintStart_toStartOf="@id/student_usn"
-        app:layout_constraintTop_toBottomOf="@+id/student_usn"
-        tools:text="Branch Name" />
-
-
-    <TextView
-        android:id="@+id/about_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_medium"
-        android:layout_marginTop="@dimen/margin_medium"
-        android:text="About CGPA Calculator"
-        android:textAppearance="?textAppearanceHeadline6"
-        android:textColor="@color/reply_blue_700"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/student_branch" />
-
-    <TextView
-        android:id="@+id/about"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_medium"
-        android:layout_marginTop="@dimen/margin_small"
-        android:layout_marginEnd="@dimen/margin_medium"
-        android:justificationMode="inter_word"
-        android:lineSpacingExtra="2dp"
-        android:text="@string/about_cgpa_calc"
-        android:textAppearance="?textAppearanceBody2"
-        android:textColor="@color/reply_blue_700"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/about_tv" />
+        <TextView
+            android:id="@+id/student_branch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?textAppearanceSubtitle1"
+            android:textColor="@color/reply_blue_700"
+            app:layout_constraintStart_toStartOf="@id/student_usn"
+            app:layout_constraintTop_toBottomOf="@+id/student_usn"
+            tools:text="Branch Name" />
 
 
-    <TextView
-        android:id="@+id/link_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_medium"
-        android:layout_marginTop="16dp"
-        android:text="Link to Repository :"
-        android:textAppearance="?textAppearanceBody2"
-        android:textColor="@color/reply_blue_700"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/about" />
+        <TextView
+            android:id="@+id/about_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_medium"
+            android:layout_marginTop="@dimen/margin_medium"
+            android:text="About CGPA Calculator"
+            android:textAppearance="?textAppearanceHeadline6"
+            android:textColor="@color/reply_blue_700"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/student_branch" />
 
-    <TextView
-        android:id="@+id/github_link"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_small"
-        android:layout_marginTop="@dimen/margin_small"
-        android:text="@string/click_here"
-        android:textAppearance="?textAppearanceBody2"
-        android:textColor="#0F72D5"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/link_label" />
-
-    <Button
-        android:id="@+id/reset_button"
-        style="@style/Widget.MaterialComponents.Button.TextButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_medium"
-        android:layout_marginBottom="@dimen/margin_medium"
-        android:text="Reset All Data"
-        android:textColor="@color/reply_red_400"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        <TextView
+            android:id="@+id/about"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_medium"
+            android:layout_marginTop="@dimen/margin_small"
+            android:layout_marginEnd="@dimen/margin_medium"
+            android:justificationMode="inter_word"
+            android:lineSpacingExtra="2dp"
+            android:text="@string/about_cgpa_calc"
+            android:textAppearance="?textAppearanceBody2"
+            android:textColor="@color/reply_blue_700"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/about_tv" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/link_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_medium"
+            android:layout_marginTop="16dp"
+            android:text="Link to Repository :"
+            android:textAppearance="?textAppearanceBody2"
+            android:textColor="@color/reply_blue_700"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/about" />
+
+        <TextView
+            android:id="@+id/github_link"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_small"
+            android:layout_marginTop="@dimen/margin_small"
+            android:text="@string/click_here"
+            android:textAppearance="?textAppearanceBody2"
+            android:textColor="#0F72D5"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/link_label" />
+
+        <Button
+            android:id="@+id/reset_button"
+            style="@style/Widget.MaterialComponents.Button.TextButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/margin_medium"
+            android:text="Reset All Data"
+            android:layout_marginTop="100dp"
+            android:textColor="@color/reply_red_400"
+            app:layout_constraintVertical_bias="1"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/note" />
+
+        <TextView
+            android:id="@+id/note"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_medium"
+            android:layout_marginTop="@dimen/margin_medium"
+            android:layout_marginEnd="@dimen/margin_medium"
+            android:justificationMode="inter_word"
+            android:lineSpacingExtra="2dp"
+            android:text="@string/setting_note"
+            android:textAppearance="?textAppearanceBody2"
+            android:textColor="@color/reply_blue_700"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/github_link"/>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
